fix x scrollbar on firefox

--- a/src/index.styl
+++ b/src/index.styl
@@ -25,6 +25,9 @@ html, body, #app, #app > div
   height: 100%
   overflow-y: auto
 
+  // this is a hack to fix the scrollbar being shown on firefox
+  overflow-x: hidden
+
 #recipe, #recipe-editor
   flex-grow: 1
 
